--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,10 +2,7 @@ repos:
   - repo: local
     hooks:
       - id: trufflehog
-        name: trufflehog
-        entry: trufflehog
-        args: ["git", "file://.", "--since-commit", "HEAD", "--no-verification", "--fail"]
-        pass_filenames: false
+        name: truffle-search
+        description: Detect secrets in your data.
+        entry: bash -c 'trufflehog git file://. --since-commit HEAD --no-verification --fail'
         language: system
-        description: "Run trufflehog with --no-verification on the latest commit"
-
