--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "Apache 2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = "^3.9"
 mypy = "^1.13.0"
 black = "^24.10.0"
 ruff = "^0.7.3"
@@ -15,6 +15,11 @@ flake8 = "^7.1.1"
 pylint = "^3.3.1"
 autodocstrings = "^0.1.3"
 bandit = "^1.7.10"
+pytest = "^8.3.3"
+requests = "^2.32.3"
+cryptography = "^43.0.3"
+pytest-cov = "^6.0.0"
+jsonschema = "^4.23.0"
 
 
 [build-system]
@@ -23,10 +28,10 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 88
-target-version = ["py313"]
+target-version = ["py9"]
 
 [tool.mypy]
-python_version = "3.13"
+python_version = "3.9"
 strict = true
 warn_unused_configs = true
 warn_redundant_casts = true
