--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "supply-chain-rekor-monitor"
-version = "4.0.0"
+version = "4.1.0"
 description = "This project can be used to verify inclusion of artifacts, whether a correct signature is present, or verify consistency in regards to the Rekor transparency logs."
 authors = ["cp-57 <109479938+cp-57@users.noreply.github.com>"]
 license = "Apache 2.0"
@@ -8,11 +8,16 @@ readme = "README.md"
 package-mode = true
 
 packages = [
-    { include = "supply-chain-rekor-monitor" }
+    { include = "supply_chain_rekor_monitor" }
 ]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+requests = "^2.32.3"
+cryptography = "^43.0.3"
+jsonschema = "^4.23.0"
+
+[tool.poetry.dev-dependencies]
 mypy = "^1.13.0"
 black = "^24.10.0"
 ruff = "^0.7.3"
@@ -21,10 +26,10 @@ pylint = "^3.3.1"
 autodocstrings = "^0.1.3"
 bandit = "^1.7.10"
 pytest = "^8.3.3"
-requests = "^2.32.3"
-cryptography = "^43.0.3"
 pytest-cov = "^6.0.0"
-jsonschema = "^4.23.0"
+
+[tool.poetry.scripts]
+supply-chain-rekor-monitor = "supply_chain_rekor_monitor.main:main"
 
 
 [build-system]
