--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,11 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install Ruff
-        run: pip install ruff
+      - name: Install Dependencies
+        run: pip install ruff black
 
       - name: Run Ruff Linter
         run: ruff check .
+      
+      - name: Run Black
+        run: black . --check 
