add bandit tool to ci and make necessary changes to satisfy tool

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,3 +37,6 @@ jobs:
 
       - name: Run Pylint
         run: poetry run pylint .
+      
+      - name: Run Bandit 
+        run: poetry run bandit -r .
