--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,6 @@ jobs:
         run: poetry run bandit -r .
 
     - name: Run TruffleHog
-      run: |
+      run: 
         pip install trufflehog
         trufflehog filesystem --directory=. || exit 1
