--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,3 +40,8 @@ jobs:
       
       - name: Run Bandit 
         run: poetry run bandit -r .
+
+      - name: Run TruffleHog
+        run: |
+          pip install trufflehog
+          trufflehog filesystem --directory=. || exit 1
