--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,8 +41,9 @@ jobs:
       - name: Run Bandit 
         run: poetry run bandit -r .
 
+      - name: Install TruffleHog
+        run: curl -sSfL https://raw.githubusercontent.com/trufflesecurity/trufflehog/main/scripts/install.sh | sh -s -- -b /usr/local/bin
+
       - name: Run TruffleHog
-        run: |
-          pip install trufflehog3
-          trufflehog3 git file://. || exit 1
+        run: trufflehog git file://. --no-verification --fail
 
