actually add pytest to ci file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,3 +47,6 @@ jobs:
       - name: Run TruffleHog
         run: trufflehog git file://. --no-verification --fail
 
+      - name: Run PyTest
+        run: PYTHONPATH=. pytest --cov=.
+
