fix wheel env variable

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -38,6 +38,12 @@ jobs:
         id: get_wheel_name
         run: echo "WHEEL_NAME=$(ls dist/*.whl)" >> $GITHUB_ENV
 
+        - name: Get Wheel File Name
+        id: get_wheel_name
+        run: |
+          WHEEL_NAME=$(ls dist/*.whl)
+          echo "WHEEL_NAME=$WHEEL_NAME" >> $GITHUB_ENV
+
       - name: Publish to PyPI
         env:
           POETRY_PASSWORD: ${{ secrets.PYPI_TOKEN }}
