--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Install CycloneDX
         run: |
           python -m pip install --upgrade pip
-          pip install cyclonedx-python-lib
+          pip install cyclonedx-bom
 
       - name: Generate SBOM
         run: |
