--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -33,14 +33,9 @@ jobs:
           poetry build
           ls dist/
 
-      - name: Install CycloneDX
+      - name: Generate SBOM using CycloneDX
         run: |
-          python -m pip install --upgrade pip
-          pip install cyclonedx-bom
-
-      - name: Generate SBOM
-        run: |
-          cyclonedx-py --output-format json --output-file cyclonedx-sbom.json .
+          cyclonedx-py poetry > cyclonedx-sbom.json
 
       - name: Generate SBOM Attestation
         uses: actions/attest-sbom@v2
