adjust cyclone dx using poetry in run

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Generate SBOM using CycloneDX
         run: |
-          cyclonedx-py poetry > cyclonedx-sbom.json
+          poetry run cyclonedx-py poetry > cyclonedx-sbom.json
 
       - name: Generate SBOM Attestation
         uses: actions/attest-sbom@v2
