--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -11,7 +11,8 @@ jobs:
 
     permissions:
       id-token: write
-      contents: write
+      attestations: write
+      contents: read
 
     steps:
       - name: Checkout Code
